grammar.js
    bsv_package: $ => choice(
      seq('package', field('name', $.bsv_packageIde), ';',
        repeat(choice($.bsv_exportDecl, $.bsv_importDecl)),
        repeat($.bsv_packageStmt),
        'endpackage', optional(seq(':', $.bsv_packageIde))),
      seq(repeat(choice($.bsv_exportDecl, $.bsv_importDecl)),
        repeat($.bsv_packageStmt)
      )
    ),

    bsv_packageIde: $ => $._bsv_Identifier,

    // exports
    bsv_packageStmt: $ => choice(
      $.bsv_moduleDef,
      $.bsv_interfaceDecl,
      $.bsv_typeDef,
      $.bsv_varDecl,
      $.bsv_varAssign,
      $.bsv_functionDef,
      $.bsv_typeclassDef,
      $.bsv_typeclassInstanceDef,
      $.bsv_externModuleImport,
      $.bsv_externCImport,
      $.bsv_exportDecl,
      $.bsv_importDecl,
      // A bare macro invocation at package scope, e.g.
      //   `defSourceShimFF(FF, mkFIFOF)
      // expands to one or more package statements before compilation.
      prec.right(seq($.bsv_macroRef,
        optional(seq('(', optional(commaSepList1($.bsv_expression)), ')'))))
    ),

    // import "BDPI" — C function imported into BSV
    bsv_varDecl: $ => choice(
      seq($.bsv_type, commaSepList1($.bsv_varInit), ';'),
      // `let x = expr;` — type inferred declaration.
      // `let { a, b, c } = expr;` — tuple/struct destructuring form.
      seq('let',
        choice(alias($._bsv_identifier, $.bsv_varIde),
          seq('{',
            commaSepList1(choice(alias($._bsv_identifier, $.bsv_varIde), '_')),
            '}')),
        '=', $.bsv_expression, ';')
    ),
    bsv_varInit: $ =>
      seq(alias($._bsv_identifier, $.bsv_varIde),
        optional($.bsv_arrayDims),
        optional(seq('=', $.bsv_expression))),
    bsv_moduleDef: $ => seq(optional($.bsv_attributeInstances),
      $.bsv_moduleProto,
      repeat($.bsv_moduleStmt),
      'endmodule',
      optional(seq(':', alias($._bsv_identifier, $.bsv_moduleIde)))),
    bsv_moduleProto: $ => seq('module',
      optional(seq('[', $.bsv_type, ']')),
      alias($._bsv_identifier, $.bsv_moduleIde),
      optional($.bsv_moduleFormalParams),
      '(', optional($.bsv_moduleFormalArgs), ')',
      optional($.bsv_provisos),
      ';'),
    bsv_moduleFormalParams: $ =>
      seq('#', '(', commaSepList1($.bsv_moduleFormalParam), ')'),
    bsv_moduleFormalParam: $ => choice(
      seq(optional($.bsv_attributeInstances),
        optional('parameter'),
        $.bsv_type,
        // Plain `_` and multi-underscore names (e.g. `__`, `___`) are used
        // as placeholder/anonymous parameter names in BSV module headers.
        choice(alias($._bsv_identifier, $.bsv_paramIde), '_', $.bsv_wildcardName)),
      // function-typed parameter: `function Type name (args)`
      seq(optional($.bsv_attributeInstances),
        'function', $.bsv_type, alias($._bsv_identifier, $.bsv_functionIde),
        '(', commaSepList($.bsv_functionFormal), ')')
    ),
    bsv_moduleFormalArgs: $ =>
      choice(seq(optional($.bsv_attributeInstances), $.bsv_type),
        commaSepList1(seq(optional($.bsv_attributeInstances),
          $.bsv_type, alias($._bsv_identifier, $.bsv_paramIde)))),

    // module statements
    bsv_moduleStmt: $ => choice(
      $.bsv_moduleInst,
      $.bsv_methodDef,
      $.bsv_subinterfaceDef,
      $.bsv_rule,
      $.bsv_varDo,
      $.bsv_varDeclDo,
      $.bsv_regWrite,
      $.bsv_callStmt,
      $.bsv_returnStmt,
      $.bsv_varDecl,
      $.bsv_varAssign,
      $.bsv_functionDef,
      $.bsv_moduleDef,
      ctxtBeginEndStmt($, $.bsv_moduleStmt),
      ctxtIf($, $.bsv_moduleStmt),
      ctxtCase($, $.bsv_moduleStmt),
      ctxtCaseMatches($, $.bsv_moduleStmt),
      ctxtFor($, $.bsv_moduleStmt),
      ctxtWhile($, $.bsv_moduleStmt)
    ),

    // rules within a module
    bsv_moduleInst: $ => prec.dynamic(1, seq(
      optional($.bsv_attributeInstances),
      $.bsv_type,
      alias($._bsv_identifier, $.bsv_varIde),
      optional($.bsv_arrayDims),
      '<-',
      $.bsv_moduleApp,
      ';'
    )),

    // Parens are optional — BSV allows parameterless module instantiations
    // like `FIFO f <- mkFIFO ;` with no `(...)`.
    bsv_moduleApp: $ => seq(
      alias($._bsv_identifier, $.bsv_moduleIde),
      optional(seq(
        '(',
        optional(commaSepList($.bsv_moduleActualParamArg)),
        ')'
      ))
    ),

    bsv_moduleActualParamArg: $ => choice(
      $.bsv_expression,
      seq('clocked_by', $.bsv_expression),
      seq('reset_by', $.bsv_expression)
    ),

    // Body form: `interface Type name; ... endinterface`
    // Assign form: `interface [Type] name = expr;`
    // Factored through a common prefix `interface optional(type) identifier`
    // then branching on `;` vs `=`.
    bsv_typeclassIde: $ => seq(
      optional(seq($.bsv_packageIde, '::')),
      $._bsv_Identifier
    ),
    bsv_expression: $ => choice(
      $.bsv_condExpr,
      $.bsv_unaryExpr,
      $.bsv_binaryExpr,
      $.bsv_exprPrimary
    ),

    bsv_exprPrimary: $ => choice(
      $._bsv_identifier,
      $._bsv_Identifier,
      // Package-qualified name: `Package::name` or `Package::Name`
      seq($.bsv_packageIde, '::',
        choice($._bsv_identifier, $._bsv_Identifier)),
      $.bsv_macroRef,
      $.bsv_intLiteral,
      $.bsv_realLiteral,
      $.bsv_stringLiteral,
      '?',
      $.bsv_bitConcat,
      $.bsv_bitSelect,
      $.bsv_functionCall,
      $.bsv_methodCall,
      $.bsv_fieldSelect,
      $.bsv_valueOfExpr,
      $.bsv_typeAssertion,
      $.bsv_beginEndExpr,
      $.bsv_actionBlock,
      $.bsv_actionValueBlock,
      $.bsv_structExpr,
      $.bsv_taggedUnionExpr,
      $.bsv_interfaceExpr,
      $.bsv_rulesExpr,
      $.bsv_seqFsmStmt,
      $.bsv_parFsmStmt,
      $.bsv_caseExpr,
      seq('(', $.bsv_expression, ')')
    ),

    // case expression — returns a value. Supports both plain and `matches`.
    bsv_structExpr: $ =>
      seq($.bsv_typeConcreteIde, '{', commaSepList($.bsv_memberBind), '}'),
    bsv_memberBind: $ =>
      seq(alias($._bsv_identifier, $.bsv_memberIde),
        ':', $.bsv_expression),

    // Tagged union literal: `tagged Tag {...}` or `tagged Tag exprPrimary`
    bsv_taggedUnionExpr: $ => prec.right(seq(
      'tagged', $._bsv_Identifier,
      optional(choice(
        seq('{', commaSepList($.bsv_memberBind), '}'),
        prec.right($.bsv_exprPrimary)
      ))
    )),

    // begin/end expression block — yields a value
    bsv_type: $ =>
      choice(seq($.bsv_typeIde,
        optional(seq('#', '(', commaSepList1($.bsv_type), ')'))),
        $.bsv_typeNat,
        $.bsv_macroRef,
        // Macro with arguments as a type expression, e.g.
        //   Bit#(`sub2(base_))
        seq($.bsv_macroRef, '(', commaSepList1($.bsv_type), ')'),
        $.bsv_functionType,
        // `module #(...)` — module-type (polymorphic module) used as a type
        seq('module', '#', '(', commaSepList1($.bsv_type), ')'),
        seq('bit', '[', $.bsv_typeNat, ':', $.bsv_typeNat, ']')),
    bsv_typeVarIde: $ => choice($._bsv_identifier, '_'),
    bsv_typeConcreteIde: $ => seq(
      optional(seq($.bsv_packageIde, '::')),
      $._bsv_Identifier
    ),
    bsv_typeIde: $ => choice($.bsv_typeConcreteIde, $.bsv_typeVarIde),
    // Numeric literal as type — most commonly a decimal number, but BSV
    // also accepts other bases (e.g. `typedef 'h4000_0000 Foo;`).
    bsv_typeNat: $ => choice(/[0-9]+/, $.bsv_baseLiteral),
    // Backtick macro reference (preprocessor macro expansion point).
    // Can appear inline as a type parameter, numeric, or expression.
    bsv_provisos: $ => seq('provisos', '(', commaSepList1($.bsv_proviso), ')'),
    bsv_proviso: $ =>
      seq($.bsv_typeclassIde, '#', '(', commaSepList1($.bsv_type), ')'),

    // attributes, guiding the compiler
    bsv_intLiteral: $ => choice("'0",
      "'1",
      $.bsv_sizedIntLiteral,
      $.bsv_unsizedIntLiteral),
    bsv_unsizedIntLiteral: $ =>
      choice(seq(optional($.bsv_sign), $.bsv_baseLiteral),
        seq(optional($.bsv_sign), /[0-9]+/)),
    bsv_realLiteral: $ => choice(/[0-9][0-9_]*\.[0-9_]*/,
      /[0-9][0-9_]*(\.[0-9_]*)?[eE][\+\-]?[0-9_]*/),

    // string literals
    _bsv_identifier: $ => choice(
      /[$_]*[a-z][a-zA-Z0-9$_]*/,
      /\\[^ \t\r\n]+/
    ),
    _bsv_Identifier: $ => /[$_]*[A-Z][a-zA-Z0-9$_]*/,
    // Placeholder name consisting of two or more underscores (e.g. `__`,
    // `___`). Single `_` keeps its special wildcard meaning via the literal
    // `'_'` token used elsewhere in the grammar.
