test/corpus/module/BSV_module_definition.txt
=================
Module definition
=================

package OneModulePackage;

module [ModuleType#(1,A)] mkSmthg #(Type1 x, parameter Type2#(a, B, 0) y)
  (IfcType#(12,13,14,a,b,c))
  provisos (Constraint1 #(Type), Constraint2 # (TypePlop, 1, 2, 3, a, b));
endmodule

endpackage

-----------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_moduleDef
      (bsv_moduleProto
        (bsv_type
          (bsv_typeIde
            (bsv_typeConcreteIde))
          (bsv_type
            (bsv_typeNat))
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde))))
        (bsv_moduleIde)
        (bsv_moduleFormalParams
          (bsv_moduleFormalParam
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde)))
            (bsv_paramIde))
          (bsv_moduleFormalParam
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde))
              (bsv_type
                (bsv_typeIde
                  (bsv_typeVarIde)))
              (bsv_type
                (bsv_typeIde
                  (bsv_typeConcreteIde)))
              (bsv_type
                (bsv_typeNat)))
            (bsv_paramIde)))
        (bsv_moduleFormalArgs
          (bsv_type
            (bsv_typeIde
              (bsv_typeConcreteIde))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))))
        (bsv_provisos
          (bsv_proviso
            (bsv_typeclassIde)
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde))))
          (bsv_proviso
            (bsv_typeclassIde)
            (bsv_type
              (bsv_typeIde
                (bsv_typeConcreteIde)))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeNat))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))
            (bsv_type
              (bsv_typeIde
                (bsv_typeVarIde)))))))))
