test/corpus/module/BSV_simple_module_definition.txt
========================
Simple module definition
========================

package OneModulePackage;

module mkSmthg ();
endmodule

endpackage

------------------------

(bsv_package
  (bsv_packageIde)
  (bsv_packageStmt
    (bsv_moduleDef
      (bsv_moduleProto
        (bsv_moduleIde)))))
